修改文件: _posts/2019-05-28-Redis简介.md

--- a/_posts/2019-05-28-Redis简介.md
+++ b/_posts/2019-05-28-Redis简介.md
@@ -1,6 +1,9 @@
 ---
 title: Redis简介 
-tags: java\Project\Tools
+tags:
+      -java
+	  -Project
+	  -Tools
 renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
