修改文件: _posts/2019-06-06-知识图谱概览.md

--- a/_posts/2019-06-06-知识图谱概览.md
+++ b/_posts/2019-06-06-知识图谱概览.md
@@ -1,6 +1,7 @@
 ---
 title: 知识图谱概览
-tags: Knowledge/Graph 
+tags: 
+       -KnowledgeGraph 
 renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
