--- a/_posts/2019-05-28-Kafka简介.md
+++ b/_posts/2019-05-28-Kafka简介.md
@@ -1,6 +1,9 @@
 ---
 title: Kafka简介
-tags: java\Project\消息系统
+tags: 
+       -java
+	   -Project
+	   -消息系统
 renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
