修改文件: _posts/2019-05-28-Redis简介.md

--- a/_posts/2019-05-28-Redis简介.md
+++ b/_posts/2019-05-28-Redis简介.md
@@ -1,9 +1,8 @@
 ---
 title: Redis简介 
 tags:
-      -java
-	  -Project
-	  -Tools
+      javaProject
+	  Tools
 renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
