修改文件: _posts/2019-05-28-Redis简介.md

--- a/_posts/2019-05-28-Redis简介.md
+++ b/_posts/2019-05-28-Redis简介.md
@@ -1,8 +1,7 @@
 ---
 title: Redis简介 
-tags:
-      javaProject
-	  Tools
+tags: javaProject
+	    Tools
 renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
