--- a/_posts/2019-06-08-Mysql事务.md
+++ b/_posts/2019-06-08-Mysql事务.md
@@ -36,16 +36,16 @@ grammar_cjkRuby: true
    其中不同的隔离级别对应不同的加锁。
 5. 各种锁：
      根据不同的方式划分不同锁：
-	 （1）根据锁的兼容性：			 
+5.1 根据锁的兼容性：			 
  - 共享锁（读锁）：S锁，允许事务读一行数据；
  - 排他锁（写锁）：X锁，允许事务删除或更新一行数据
-   （2）根据加锁范围：
+5.2 根据加锁范围：
  -    表级锁：MyISAM引擎是表锁设计
  -    行级锁：InnoDB引擎支持行级锁，并具有3种行锁的算法：
 	   （a）Record lock：单个行记录上的锁；
 	   （b）Gap Lock：间隙锁，锁定一个范围，但不包含记录本身；
 	   （c）Next-key Lock：锁定一个范围，并且锁定了记录本身；通过这种方式解决了幻读现象
-	   （3）根据锁的使用：
+5.3 根据锁的使用：
  -   悲观锁：总是假设最坏的情况，认为别人拿数据就会更改，因此每次在拿数据的时候就加上锁；
  - 	乐观锁：总是假设最好的情况，每次去拿数据的时候都认为别人不会修改，所以不会上锁，但是在更新的时候会判断一下在此期间别人有没有去更新这个数据，可以使用版本号机制和CAS算法实现。
 
