修改文件: _posts/2019-05-29-Spring.md

--- a/_posts/2019-05-29-Spring.md
+++ b/_posts/2019-05-29-Spring.md
@@ -6,9 +6,9 @@ renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
 # Spring
-## 目的：
+1. 目的：
 		进行企业级Java项目的应用开发，替代重量级框架，比如EJB，实现了轻量级的Java开发应用框架。
-## 实现：
+2. 实现：
 	主要通过以下4个策略现其低耦合和模块化：
 	（1）基于POJO对象和最小侵入式编程；
 	（2）基于依赖注入（DI）和面向接口实现低耦合；
@@ -17,14 +17,14 @@ grammar_cjkRuby: true
 	其中IOC（控制反转）和AOP（面向切面）是核心：
 	（1）IOC：控制反转也就是依赖注入DI，传统的开发过程中，如果一个对象依赖于于另一个对象或其他资源，需要自己主动去创建new一个对象，这样一来就会有很高的耦合度，在修改或测试时经常会“牵一发而动全身”，而IOC的思想就是通过一个第三方机构即IOC容器来实现对象之间的依赖配置，即对象自己不需要再去主动创建依赖对象，只需要让IOC进行配置即可，这样一来大大降低了耦合度。
 	（2）AOP：面向切面，对OOP面向对象进行了扩展，OOP是从上到下的，AOP可以实现从左到右，即对于一些基础的常用的且与业务核心功能无关的模块可以使用AOP的思想插入进去，常见的如用户登录模块、日志模块，这些模块与业务的功能无关，但每实现一个新的业务时又都需要经过这些模块，如果是传统的OOP，则每开发一个新的项目都要重新写这些模块，而AOP可以把这些模块提取出来进行插入。
-## Spring MVC
+3. Spring MVC
 	主要用于web应用开发和网络接口，是Spring的一个模块，通过一些预定义的组件构成一个war包，通过web容器进行启动。
 ![SpringMVC](./images/1591258850844.png)
 	
 	
 # SpringBoot
-    目的：实现自动配置，降低项目搭建的复杂度；SpringBoot通过一套默认配置降低复杂度；
-	两个特性：
+   1. 目的：实现自动配置，降低项目搭建的复杂度；SpringBoot通过一套默认配置降低复杂度；
+	2. 两个特性：
 	（1）@SpringBootApplication：
 ![注解@SpringBootApplication](./images/1591259022667.png)
 这是一个复合注解，包括@ComponentScan，@SpringBootConfiguration，@EnableAutoConfiguration
