修改文件: _posts/2019-05-29-应用架构设计.md

--- a/_posts/2019-05-29-应用架构设计.md
+++ b/_posts/2019-05-29-应用架构设计.md
@@ -1,5 +1,5 @@
 ---
-title: 应用架构设计
+title: 架构设计
 tags: javaProject
          Frame Design
 renderNumberedHeading: true
@@ -17,4 +17,19 @@ grammar_cjkRuby: true
  - 通过Kafka用户“订阅”优惠券
   ![架构设计](./images/1591278649247.png)
 
+# 缓存设计
+	在上面的应用架构中提到了将优惠券的token存储在redis中，因为如果将token信息存储在文件中，会消耗大量的IO时间，所以可以将优惠券的token信息存放于缓存中，共分为两部分信息:（1）商户投放优惠券的初始token信息；（2）用户使用优惠券的token信息。在Redis中通过Set结构存储，因为不重复且无序满足优惠券token的特点；
+	另外商户的信息也可以存放于缓存中，因为商户的数量较少且会经常使用，所以可以将其存储于Redis的hashmap结构中；
+	如下图所示：
+	![缓存设计](./images/1591329482885.png)
 	
+# 日志设计
+1. 为什么需要日志？
+    （1）进行事件查询；
+	（2）记录用户行为进行分析；
+2. 日志分类：
+   （1）记录日志：记录系统事件；
+   （2）分析日志：用来对用户的行为操作进行分析以改进系统；
+3. 日志内容：
+   （1）记录日志：只需要记录事件，不需要进行分析；
+   （2）分析日志：用户动作、用户Id、时间戳（由服务器生成）、用户Ip地址、行为信息（用户请求数据和服务器处理数据）
