修改文件: _posts/2019-06-01-常量定义及安全校验.md

--- a/_posts/2019-06-01-常量定义及安全校验.md
+++ b/_posts/2019-06-01-常量定义及安全校验.md
@@ -1,5 +1,5 @@
 ---
-title: 常量定义及安全验证
+title:  常量定义及安全验证
 tags:  javaProject
           Constants
 		  security
@@ -10,9 +10,20 @@ grammar_cjkRuby: true
 
 # 常量定义
      根据项目的逻辑需求，先定义好必须的常量：
-	 1. 通用常量：（1）商户优惠券投放到Kafka中的topic；（2）优惠券的token-string；（3）token的具体信息；
-	 2. 优惠券背景色：使用枚举类型定义，比如只定义红、绿、蓝三种颜色；
-	 3. 错误码定义：也使用枚举类型定义：（1）0：成功；（2）1：商户名称重复；（3）2：商户logo为空；（4）3：商户营业执照为空；（5）4：商户联系电话错误；（6）5：商户地址为空；（7）6：商户不存在；
+ 1. 通用常量：
+    （1）商户优惠券投放到Kafka中的topic；
+	（2）优惠券的token-string；
+	（3）token的具体信息；
+ 2.  优惠券背景色：使用枚举类型定义，比如只定义红、绿、蓝三种颜色；
+ 3.  错误码定义：也使用枚举类型定义：
+     （1）0：成功；
+	 （2）1：商户名称重复；
+	 （3）2：商户logo为空；
+	 （4）3：商户营业执照为空；
+	 （5）4：商户联系电话错误；
+	 （6）5：商户地址为空；
+	 （7）6：商户不存在；
+
 # 安全验证
 1. 多线程变量
    对token变量使用多例模式，因为Spring MVC默认是单例模式，在使用时就会存在一定的安全隐患，而token是每个商户都可以投放的优惠券，当多个线程同时调用时就需要考虑到线程安全的问题，可以用ThreadLocal包裹此变量提供“线程级”变量作用域，以保证线程安全。
