修改文件: _posts/2019-06-01-常量定义及安全校验.md

--- a/_posts/2019-06-01-常量定义及安全校验.md
+++ b/_posts/2019-06-01-常量定义及安全校验.md
@@ -1,8 +1,8 @@
 ---
-title:  常量定义及安全验证
-tags:  javaProject
-          Constants
-		  security
+title: 常量定义&安全验证
+tags: javaProject
+        Constants
+		Security
 renderNumberedHeading: true
 grammar_cjkRuby: true
 ---
