修改文件: _posts/2019-06-02-ORM&JPA.md

--- a/_posts/2019-06-02-ORM&JPA.md
+++ b/_posts/2019-06-02-ORM&JPA.md
@@ -19,3 +19,12 @@ grammar_cjkRuby: true
    （2）在yml文件添加mysql和jpa的相关设置；
    （3）entity层：添加数据库表实体，注意一些注解的使用；
    （4）dao层：即为数据库表实体添加仓库接口，不需要再写CURD操作，如果有个性化的操作再实现即可；
+ 5. entity层及dao层常用到的注解：
+    （1）@Data：注在类上，这是lombok工具类库中的一个注解，之前在添加依赖时添加了lombok，这个工具类库的作用就是简化代码，而使用@Data注解，就可以自动生成get\set等相关方法；
+	（2）@NoArgsConstructor：注在类上，提供类的无参构造；
+	（3）@AllArgsConstructor：注在类上，提供类的全参构造；
+	（4）@entity： 注在类上，表明该类是一个实体类，默认对应数据库中的表明是user_entity，可以添加属性@Entity(name="...")修改表名，也可以与@Table一起使用
+	（5）@Column：注在属性上，即将成员属性映射到关系表中哪一列和该列的结构信息，比如映射的列名name="..."，是否唯一unique=true，是否为空nullable=false；
+	（6）@Id：注在属性上，指定表的主键，与主键一起使用的还有@GeneratedValue与@GenericGenerator，其中这两个注解的区别就在于前者是JPA通用的生成器，后者是自定义的主键生成器，查看源码可以看到JPA提供了四种生成类型：TABLE：即使用一个特定的数据库表格保存主键，@SEQUENCE：使用底层数据库的序列来生成主键；IDENTITY：主键由数据库自动生成；AUTO：主键由程序控制，默认使用AUTO
+	（7）@Basic：是实体类与数据库字段映射最简单的类型，如果在实体类属性上不加@Basic也会自动加上@Basic，注解中fetch()用来指定属性的加载机制，默认为EAGER（即时加载），LAZY（懒加载），即时加载就是在实例化对象的时候必须加载该属性值，懒加载就是只有在调用该属性时才加载。
+	（8）@Repository：该注解用来标识Spring bean，即将数据访问层（dao层）的类标识为Spring bean，另外它可以在持久层作为一个标记去自动处理数据库操作产生的异常，因为原生的java操作数据库所产生的异常只定义了几种，但是产生数据库异常的原因却有很多种，这样对数据库操作的报错排查造成了一定的影响，而Spring拓展了原生的持久层异常，针对不同的产生原因有了更多的异常进行描述，所以在添加该注解的类上，如果数据库操作中抛出异常就能对其进行处理，转而抛出翻译后的spring专属数据库异常，方便对异常进行排查处理。
