--- a/_posts/2019-06-03-VO对象.md
+++ b/_posts/2019-06-03-VO对象.md
@@ -7,7 +7,7 @@ grammar_cjkRuby: true
 
 
 # JAVA 三层设计
-    之前一篇博文里有提到架构设计，其实很容易理解为什么要使用三层设计，在我们现实生活中层级管理几乎无处不在，因为当一个团队人数太多时，领导者不可能去管理到每一个人，所以产生了一层一层的部门职位，java三层设计也是这样的一个思想，当项目较大业务功能较多时如果融合到一起去实现肯定会很繁琐，而且不容易进行改动，那么三层设计就是根据不同的操作来划分：
+   1.  之前一篇博文里有提到架构设计，其实很容易理解为什么要使用三层设计，在我们现实生活中层级管理几乎无处不在，因为当一个团队人数太多时，领导者不可能去管理到每一个人，所以产生了一层一层的部门职位，java三层设计也是这样的一个思想，当项目较大业务功能较多时如果融合到一起去实现肯定会很繁琐，而且不容易进行改动，那么三层设计就是根据不同的操作来划分：
  -      （1）表示层：与前端进行交互，接收请求与返回数据；
  - 		（2）业务逻辑层：处理数据；
  - 		（3）数据访问层：对数据库进行操作。
@@ -17,9 +17,9 @@ grammar_cjkRuby: true
  - PO对象：持久层对象，就是从数据库中直接获取的对象；
  - DTO对象：数据传输对象，一般来说PO对象不能直接进行处理，比如为了安全在数据库设计时，可能会把密码单独设计一个表进行处理，通过用户id连接用户信息表，当用户登录之后需要获取用户信息，这样的话查询时需要分别查询两个表，数据访问层就会返回两个对象，但是在操作过程中希望用户的所有信息在一个对象里，所以就设计了一个DTO；
  - VO对象：视图层对象：DTO对象不能直接返回，因为可能有些信息不能展示在页面上，所以又专门创造出一个VO对象来存希望给用户看到的信息。
-  总而言之，PO是数据访问层用的，DTO是业务逻辑层用的，VO是表示层返回给用户看的。
+   总而言之，PO是数据访问层用的，DTO是业务逻辑层用的，VO是表示层返回给用户看的。
  # 卡包项目中的VO对象
-    根据卡包项目中商户服务系统的需求，可以设计以下几种vo对象：
+     根据卡包项目中商户服务系统的需求，可以设计以下几种vo对象：
 
  - （1）通用响应对象：即返回响应的错误码和错误信息；
  - 	（2）创建商户请求对象：不同于商户的PO对象，展示数据可以不包括id及是否审核，所以可以定义name、logo、license、phone、address几个对象；
