--- a/_posts/2019-06-03-VO对象.md
+++ b/_posts/2019-06-03-VO对象.md
@@ -19,7 +19,7 @@ grammar_cjkRuby: true
  - VO对象：视图层对象：DTO对象不能直接返回，因为可能有些信息不能展示在页面上，所以又专门创造出一个VO对象来存希望给用户看到的信息。
    总而言之，PO是数据访问层用的，DTO是业务逻辑层用的，VO是表示层返回给用户看的。
  # 卡包项目中的VO对象
-     根据卡包项目中商户服务系统的需求，可以设计以下几种vo对象：
+  1. 根据卡包项目中商户服务系统的需求，可以设计以下几种vo对象：
 
  - （1）通用响应对象：即返回响应的错误码和错误信息；
  - 	（2）创建商户请求对象：不同于商户的PO对象，展示数据可以不包括id及是否审核，所以可以定义name、logo、license、phone、address几个对象；
