修改文件: _posts/2019-06-03-VO对象.md

--- a/_posts/2019-06-03-VO对象.md
+++ b/_posts/2019-06-03-VO对象.md
@@ -18,8 +18,9 @@ grammar_cjkRuby: true
  - DTO对象：数据传输对象，一般来说PO对象不能直接进行处理，比如为了安全在数据库设计时，可能会把密码单独设计一个表进行处理，通过用户id连接用户信息表，当用户登录之后需要获取用户信息，这样的话查询时需要分别查询两个表，数据访问层就会返回两个对象，但是在操作过程中希望用户的所有信息在一个对象里，所以就设计了一个DTO；
  - VO对象：视图层对象：DTO对象不能直接返回，因为可能有些信息不能展示在页面上，所以又专门创造出一个VO对象来存希望给用户看到的信息。
    总而言之，PO是数据访问层用的，DTO是业务逻辑层用的，VO是表示层返回给用户看的。
+   
  # 卡包项目中的VO对象
-  1. 根据卡包项目中商户服务系统的需求，可以设计以下几种vo对象：
+      根据卡包项目中商户服务系统的需求，可以设计以下几种vo对象：
 
  - （1）通用响应对象：即返回响应的错误码和错误信息；
  - 	（2）创建商户请求对象：不同于商户的PO对象，展示数据可以不包括id及是否审核，所以可以定义name、logo、license、phone、address几个对象；
