--- a/_posts/2019-06-06-用户子系统.md
+++ b/_posts/2019-06-06-用户子系统.md
@@ -39,9 +39,9 @@ grammar_cjkRuby: true
     PS.数据库的几种操作语言
 
  1. DDL（Data Definition Language）数据定义语言，主要是定义或改变表的结构、数据类型、表之间的链接和约束等初始化工作上，大多在建立表时使用，主要命令有Create\alter\drop；
- 2. DML（Data Manipulation Language）:数据操作语言，主要是对记录进行操作的语言，即增删改查命令；
+ 2. DML（Data Manipulation Language）数据操作语言，主要是对记录进行操作的语言，即增删改查命令；
  3. DCL（Data Control Language）数据库控制语言，即用来设置或更改数据库用户或角色权限的语句，包括grant\deny\revoke语句；
- 4. TCL（Transaction Control Language)事务控制语言，j即commit、rollback。
+ 4. TCL（Transaction Control Language)事务控制语言，即commit、rollback。
    
 # 三、常量定义
 		根据模块分析，还需要定义以下常量便于后续的使用：
