修改文件: _posts/2019-06-06-用户服务功能实现.md

--- a/_posts/2019-06-06-用户服务功能实现.md
+++ b/_posts/2019-06-06-用户服务功能实现.md
@@ -8,15 +8,22 @@ grammar_cjkRuby: true
 
 
 # 一、用户服务功能实现
-	该服务主要实现创建用户功能:
+该服务主要实现创建用户功能:
 	
-	 1. service层：
-	      创建用户服务接口；
-		  接口实现：使用@Autowired注解自动注入userDao，在创建用户方法中可访问dao层与数据库进行交互保存新建用户对象；
-	2. controller层：
-	      接收post请求调用service层的具体方法。
+ 1. service层：
+ 创建用户服务接口；
+ 接口实现：使用@Autowired注解自动注入userDao，在创建用户方法中可访问dao层与数据库进行交互保存新建用户对象；
+ 2. controller层：
+接收post请求调用service层的具体方法。
     
-	该服务功能的逻辑实现较简单。与商户子系统中的services层一样，主要用到了@Service、@Slf4j、@Autowired注解。
+ 该服务功能的逻辑实现较简单。与商户子系统中的services层一样，主要用到了@Service、@Slf4j、@Autowired注解。
+ 编码过程中SpringMVC的示意图如下：
+ passbook:
+ 1. createUser：@PostMapping/create
+ 2. passbook:  @PostMapping/gainPassTemplate用户领取优惠券\@inventoryInfo获取指定用户的库存优惠券信息即用户还可以领取哪些优惠券\@userPassInfo获取“我的优惠券”即用户已领取但还没使用的\@userUsedPassInfo获取用户已使用的优惠券信息\@userUsePass用户使用优惠券\@PostMapping/createFeedback用户创建评论信息\@getFeedback获取评论信息
+ 3. tokenUpload：上传token
+
+	
    
 -----------------------分割线-------------------------------------
 
