修改文件: _posts/2019-06-10-消息中间件.md

--- a/_posts/2019-06-10-消息中间件.md
+++ b/_posts/2019-06-10-消息中间件.md
@@ -46,6 +46,7 @@ grammar_cjkRuby: true
  - 消息的生产者和消费者之间没有时间上的相关性，无论消费者在生产者发送消息的时候是否处于运行状态，消费者都可以提取消息；
  - 消息被消费后队列中不会再存储，所以消费者不会消费到已经被接收的消息；
  - 一个queue可以有多个消费者，且可以实现负载均衡；
+ - 点对点模式下，消费者是主动拉取数据
 2. 发布-订阅模式——topic:
   生产者生产消息发布到topic中，订阅者从topic中接收消息，可能有以下几种消费情况：
  - 先启动订阅者，后启动生产者，此时生产者发布的消息，每个订阅者都能收到，消息出队的个数为订阅者的数量*发布者发布的消息数量；
@@ -54,6 +55,7 @@ grammar_cjkRuby: true
  - 每个消息可以有多个消费者，类比1对N的关系；
  - 消息的生产者和消费者之间又时间上的相关性，消费者只能接收订阅之后的消息；
  - 生产者生产时，topic不保存消息，它是无状态的不落地，假如无人订阅就去生产，它就是一条废消息，所以一般先启动消费者再启动生产者。
+ - 类比于公众号，订阅之后会“推”给订阅者，这种方式会存在一个问题，就是“推”的速度取决于topic，而订阅者的处理速度不一致可能造成资源的浪费；因此发布订阅模式中有两种方法：一种是订阅者主动拉取消息，一种是topic推送消息。
 3.  queue  && topic：
  - 工作模式：queue是“负载均衡”模式，如果当前没有消费者，消息也不会丢弃；如果有多个消费者，那么一条消息也只会发送给一个消费者，并且要求消费者ack信息；而topic是订阅-发布模式，如果当前没有订阅者，消息将会被丢弃，如果有多个订阅者，那么这些订阅者都会收到消息；
  - 有无状态：queue数据默认会在mq服务器上以文件形式保存；topic模式是无状态的；
